# ameise

./: README.md  pyproject.toml
src/ameise/: __about__.py  __main__.py  a_star.py  altimètre.py  animation.py  game.py  graph.py
src/ameise/cli/: __init__.py
src/ameise/resources/: __init__.py
